tests/algorithms/transpiler/CPP/data_structures/binary_tree/mirror_binary_tree.cpp
// Generated by Mochi transpiler v0.10.59 on 2025-08-07 00:23:36 GMT+7
#include <iostream>
#include <string>
#include <vector>
#include <sstream>
#include <iomanip>
#include <cmath>
#include <optional>
#include <any>
#include <type_traits>
#include <cstdlib>
#include <chrono>
#include <sys/resource.h>
#include <unistd.h>
#include <cstdio>
#include <map>


static int _now() {
    static long long seed = 0;
    static bool seeded = false;
    if (!seeded) {
        const char* s = std::getenv("MOCHI_NOW_SEED");
        if (s && *s) { seed = std::atoll(s); seeded = true; }
    }
    if (seeded) {
        seed = (seed * 1664525 + 1013904223) % 2147483647;
        return static_cast<int>(seed);
    }
    return (int)(std::chrono::duration_cast<std::chrono::microseconds>(std::chrono::system_clock::now().time_since_epoch()).count() % 2147483647);
}
static long long _mem() {
#if defined(__linux__)
    long long rss = 0;
    FILE* f = std::fopen("/proc/self/statm", "r");
    if (f) { long long pages; if (std::fscanf(f, "%*s %lld", &pages) == 1) rss = pages * sysconf(_SC_PAGESIZE); std::fclose(f); }
    if (rss == 0) {
        f = std::fopen("/proc/self/status", "r");
        if (f) {
            char buf[256];
            while (std::fgets(buf, sizeof buf, f)) {
                long long val;
                if (std::sscanf(buf, "VmRSS: %lld", &val) == 1 || std::sscanf(buf, "VmHWM: %lld", &val) == 1) {
                    rss = val * 1024;
                    break;
                }
            }
            std::fclose(f);
        }
    }
    if (rss == 0) {
        struct rusage usage{};
        getrusage(RUSAGE_SELF, &usage);
        rss = (long long)usage.ru_maxrss * 1024;
    }
    return rss;
#elif defined(__APPLE__)
    struct rusage usage{};
    getrusage(RUSAGE_SELF, &usage);
    return (long long)usage.ru_maxrss;
#else
    struct rusage usage{};
    getrusage(RUSAGE_SELF, &usage);
    return (long long)usage.ru_maxrss * 1024;
#endif
}
static long long _bench_now() {
    return std::chrono::duration_cast<std::chrono::microseconds>(std::chrono::system_clock::now().time_since_epoch()).count();
}
static void any_to_stream(std::ostream& os, const std::any& val) {
    if(val.type() == typeid(int)) os << std::any_cast<int>(val);
    else if(val.type() == typeid(int64_t)) os << std::any_cast<int64_t>(val);
    else if(val.type() == typeid(double)) os << std::any_cast<double>(val);
    else if(val.type() == typeid(bool)) os << (std::any_cast<bool>(val) ? "true" : "false");
    else if(val.type() == typeid(std::string)) os << std::any_cast<std::string>(val);
    else if(val.type() == typeid(std::vector<int64_t>)) { const auto& v = std::any_cast<const std::vector<int64_t>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ' '; os << v[i]; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ' '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ' '; os << v[j]; } os << ']'; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::string>)) { const auto& v = std::any_cast<const std::vector<std::string>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ' '; os << v[i]; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::any>)) { const auto& v = std::any_cast<const std::vector<std::any>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ' '; any_to_stream(os, v[i]); } os << ']'; }
    else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
    else os << "<any>";
}
static double any_to_double(const std::any& v) {
    if(v.type() == typeid(int)) return (double)std::any_cast<int>(v);
    if(v.type() == typeid(double)) return std::any_cast<double>(v);
    return 0;
}
static std::string any_to_string(const std::any& v) {
    if(v.type() == typeid(std::string)) return std::any_cast<std::string>(v);
    if(v.type() == typeid(int)) return std::to_string(std::any_cast<int>(v));
    if(v.type() == typeid(int64_t)) return std::to_string(std::any_cast<int64_t>(v));
    if(v.type() == typeid(double)) { std::ostringstream ss; ss << std::any_cast<double>(v); return ss.str(); }
    if(v.type() == typeid(bool)) return std::any_cast<bool>(v) ? "true" : "false";
    return std::string();
}
template <typename T>
std::ostream& operator<<(std::ostream& os, const std::vector<T>& vec) {
    os << "[";
    for(size_t i=0;i<vec.size();++i){ if(i>0) os << ' '; if constexpr(std::is_same_v<T, std::any>) any_to_stream(os, vec[i]); else os << vec[i]; }
    os << "]";
    return os;
}


template<typename T> std::string _to_string(const T& v) {
    std::ostringstream ss;
    ss << std::boolalpha << v;
    return ss.str();
}
struct Tree;

std::ostream& operator<<(std::ostream&, const Tree&);


struct Tree {
    std::vector<int64_t> values;
    std::vector<int64_t> left;
    std::vector<int64_t> right;
    int64_t root;
    auto operator<=>(const Tree&) const = default;
};

std::ostream& operator<<(std::ostream& os, const Tree& v) {
    os << '{' << "'values': "<< "["; for(size_t i=0;i<v.values.size();++i){ if(i>0) os << ", "; os << v.values[i]; } os << "]"
 << ", " << "'left': "<< "["; for(size_t i=0;i<v.left.size();++i){ if(i>0) os << ", "; os << v.left[i]; } os << "]"
 << ", " << "'right': "<< "["; for(size_t i=0;i<v.right.size();++i){ if(i>0) os << ", "; os << v.right[i]; } os << "]"
 << ", " << "'root': "<< v.root
 << '}';
    return os;
}

void mirror_node(std::vector<int64_t> left, std::vector<int64_t> right, int64_t idx);
Tree mirror(const Tree& tree);
std::vector<int64_t> inorder(const Tree& tree, int64_t idx);
Tree make_tree_zero();
Tree make_tree_seven();
Tree make_tree_nine();
int main();

void mirror_node(std::vector<int64_t> left, std::vector<int64_t> right, int64_t idx) {
    if ((idx == -int64_t(1))) {
        return;
    }
    int64_t temp = left[idx];
    left[idx] = right[idx];
    right[idx] = temp;
    mirror_node(left, right, left[idx]);
    mirror_node(left, right, right[idx]);
}

Tree mirror(const Tree& tree) {
    mirror_node(tree.left, tree.right, tree.root);
    return tree;
}

std::vector<int64_t> inorder(const Tree& tree, int64_t idx) {
    if ((idx == -int64_t(1))) {
        return std::vector<int64_t>{};
    }
    std::vector<int64_t> left_vals = inorder(tree, tree.left[idx]);
    std::vector<int64_t> right_vals = inorder(tree, tree.right[idx]);
    return concat(concat(left_vals, std::vector<int64_t>{tree.values[idx]}), right_vals);
}

Tree make_tree_zero() {
    return Tree{.values = std::vector<int64_t>{int64_t(0)}, .left = std::vector<int64_t>{-int64_t(1)}, .right = std::vector<int64_t>{-int64_t(1)}, .root = int64_t(0)};
}

Tree make_tree_seven() {
    return Tree{.values = std::vector<int64_t>{int64_t(1), int64_t(2), int64_t(3), int64_t(4), int64_t(5), int64_t(6), int64_t(7)}, .left = std::vector<int64_t>{int64_t(1), int64_t(3), int64_t(5), -int64_t(1), -int64_t(1), -int64_t(1), -int64_t(1)}, .right = std::vector<int64_t>{int64_t(2), int64_t(4), int64_t(6), -int64_t(1), -int64_t(1), -int64_t(1), -int64_t(1)}, .root = int64_t(0)};
}

Tree make_tree_nine() {
    return Tree{.values = std::vector<int64_t>{int64_t(1), int64_t(2), int64_t(3), int64_t(4), int64_t(5), int64_t(6), int64_t(7), int64_t(8), int64_t(9)}, .left = std::vector<int64_t>{int64_t(1), int64_t(3), -int64_t(1), int64_t(6), -int64_t(1), -int64_t(1), -int64_t(1), -int64_t(1), -int64_t(1)}, .right = std::vector<int64_t>{int64_t(2), int64_t(4), int64_t(5), int64_t(7), int64_t(8), -int64_t(1), -int64_t(1), -int64_t(1), -int64_t(1)}, .root = int64_t(0)};
}

int main() {
    {
        struct __BenchGuard {
            long long start;
            __BenchGuard() : start(_bench_now()) {}
            ~__BenchGuard() {
                    auto __bench_end = _bench_now();
                    auto __bench_mem = _mem();
                    auto __bench_dur = __bench_end - start;
                    std::cout << "{\n  \"duration_us\": " << __bench_dur << ",\n  \"memory_bytes\": " << __bench_mem << ",\n  \"name\": \"main\"\n}" << std::endl;
            }
        } __bench_guard;
        std::vector<std::string> names = std::vector<std::string>{std::string("zero"), std::string("seven"), std::string("nine")};
        std::vector<Tree> trees = std::vector<Tree>{make_tree_zero(), make_tree_seven(), make_tree_nine()};
        int64_t i = int64_t(0);
        while ((i < trees.size())) {
            Tree tree = trees[i];
            std::cout << (((std::string("      The ") + names[i]) + std::string(" tree: ")) + ([&]{ std::ostringstream ss; { auto __tmp = inorder(tree, tree.root); ss << "["; for(size_t i=0;i<__tmp.size();++i){ if(i>0) ss << ' '; ss << __tmp[i]; } ss << "]"; }
 return ss.str(); }()));
            std::cout << std::endl;
            Tree mirrored = mirror(tree);
            std::cout << (((std::string("Mirror of ") + names[i]) + std::string(" tree: ")) + ([&]{ std::ostringstream ss; { auto __tmp = inorder(mirrored, mirrored.root); ss << "["; for(size_t i=0;i<__tmp.size();++i){ if(i>0) ss << ' '; ss << __tmp[i]; } ss << "]"; }
 return ss.str(); }()));
            std::cout << std::endl;
            i = (i + int64_t(1));
        }
    }
    return 0;
}
